// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SagaRunner all runs all of a record of effects 1`] = `
Object {
  "one": Object {
    "payload": Object {
      "bart_simpson": "first",
    },
    "topic": "test-all-1",
    "transaction_id": "static-transaction-id",
  },
  "two": Object {
    "payload": Object {
      "bart_simpson": "second",
    },
    "topic": "test-all-1",
    "transaction_id": "static-transaction-id",
  },
}
`;

exports[`SagaRunner all runs all of an array of effects 1`] = `
Array [
  Object {
    "payload": Object {
      "bart_simpson": "first",
    },
    "topic": "test-all-1",
    "transaction_id": "static-transaction-id",
  },
  Object {
    "payload": Object {
      "bart_simpson": "second",
    },
    "topic": "test-all-1",
    "transaction_id": "static-transaction-id",
  },
]
`;
